# Production-RAG-Application

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  ISSUES.md  README.md  architecture.excalidraw  docker-compose.yml  pyproject.toml  render.yml  test_questions.md
.github/workflows/: ci.yml  deploy-cloud-run.yml
app/: agent.py  cache.py  chunking.py  config.py  document_parser.py  document_store.py  ingestion.py  main.py  models.py  monitoring.py  retrieval.py  security.py  tools.py
docs/: ISSUES.md  cloud_run_plan.md  evaluation_system_plan.md  retrieval_strategy_plan.md  supabase_rag_plan.md
documents/: metadata.json
documents/adjuster_notes/: NOTE-001.txt  NOTE-002.txt  NOTE-003.txt  NOTE-004.txt  NOTE-005.txt
documents/claims/: CLM-CA-2024-003.txt  CLM-CA-2024-004.txt  CLM-FL-2024-001.txt  CLM-FL-2024-002.txt  CLM-IL-2024-009.txt  (+5 more)
evals/: config.py  loader.py  models.py  protocols.py  runner.py
plans/: agent_system_prompt_fix_plan.md  connection_pooling_plan.md  contextual_chunking_plan.md  evaluation_system_plan.md  memory_management_plan.md  react_agent_plan.md  redis_cache_plan.md  retrieval_quality_plan.md  tool_calling_plan.md
scripts/: generate_documents.py  ingest.py  run_evals.py  setup-cloud-run.sh
tests/: conftest.py  test_agent.py  test_cache.py  test_chunking.py  test_chunking_eval.py  test_document_parser.py  test_document_store.py  test_generation_structural_eval.py  test_health.py  test_ingest_cli.py  test_ingestion.py  test_retrieval.py  test_retrieval_eval.py  test_security_eval.py
(+24 files in other folders)
