[project]
name = "prod-rag"
version = "0.1.0"
description = "Production-ready RAG API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "langchain-anthropic>=1.3.3",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "langsmith>=0.7.4",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
    "supabase>=2.15.0",
    "psycopg2-binary>=2.9.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.20",
    "langchain-text-splitters>=0.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.17",
]
